GNOME Bugzilla – Bug 747375
Fix a wrong header guard in libempathy-gtk/empathy-smiley-manager.h
Last modified: 2015-04-07 15:41:06 UTC
In libempathy-gtk/empathy-smiley-manager.h: #ifndef __EMPATHY_SMILEY_MANAGER__H__ #define __EMPATHY_SMILEY_MANAGER_H__ The #ifndef uses a wrong macro name. This bug is found by clang.
Created attachment 300989 [details] [review] trivial: Fix a wrong header guard
Review of attachment 300989 [details] [review]: Looks good to me. xclaesse, cassidy?
Review of attachment 300989 [details] [review]: From #empathy on GIMPNet: 15:15 <rishi> xclaesse: cassidy: Did you notice this build fix: https://bugzilla.gnome.org/show_bug.cgi?id=747375 ? 15:27 <xclaesse> rishi, +1 to merge it :)
Attachment 300989 [details] pushed as 7567d73 - trivial: Fix a wrong header guard