trivial: Fix a wrong header guard

This problem was caught by clang.

https://bugzilla.gnome.org/show_bug.cgi?id=747375